getting set up to switch backgrounds with project quote - trying to avoid project highlight from jumping in height when there is no image loaded

--- a/public/css/portfolio2.css
+++ b/public/css/portfolio2.css
@@ -135,6 +135,12 @@ a:hover {
   .link-fade-bg:hover {
     transition: color 0.65s, background-color 0.75s; }
 
+.bg-color-red {
+  background-color: #ff0000; }
+
+.bg-color-blue {
+  background-color: #000000; }
+
 h1 {
   font-size: 25px;
   color: #ff0000; }
@@ -198,6 +204,7 @@ h1 {
   text-align: left; }
 
 .project-highlight {
+  min-height: 504px;
   position: relative;
   background-color: #cccccc;
   margin: 30px 0; }
@@ -267,8 +274,7 @@ h1 {
   border-top: 7px solid #000000;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: #b2301b; }
+  align-items: center; }
   .project-quote .pq-text {
     text-align: center;
     font-size: 45px;
