--- a/public/sass/modules/_project_highlight.scss
+++ b/public/sass/modules/_project_highlight.scss
@@ -1,4 +1,5 @@
 .project-highlight {
+  min-height: 504px;
   position: relative;
   background-color: $grey;
   margin: 30px 0;
