--- a/public/sass/modules/_project_quote.scss
+++ b/public/sass/modules/_project_quote.scss
@@ -6,7 +6,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #b2301b;
   .pq-text {
     text-align: center;
     font-size: 45px;
